<resources>
    <string name="app_name">Bukhari Academy</string>
    <string name="signup">SignUp</string>
    <string name="signup_to_create_account">SignUp to create account</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="login">LogIn</string>
    <string name="user_name">User name</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="bukhari_academy">Bukhari Academy</string>
    <string name="counter_value">0</string>
    <string name="btn_counter">Count</string>
    <string name="btn_freeze">Freeze</string>
    <string name="login_label">Login Area</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="placeholder_username">Enter Username</string>
    <string name="placeholder_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


</resources>