<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/white"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"

        android:text="@string/signup_to_create_account"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/fullname"
        android:paddingLeft="30dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
       android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background"
        android:layout_below="@+id/et_full_name"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/background"
        android:layout_below="@+id/et_email"
        android:drawableEnd="@drawable/baseline_visibility_24"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/signup"
        android:backgroundTint="@color/primary"
        android:layout_below="@+id/et_password"

        />

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/btn_sign_up"

        />
    <TextView
        android:id="@+id/tv_go_to_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:clickable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#211ee3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/btn_sign_up"
        android:layout_toEndOf="@+id/tv_already_have_account"
        />
</RelativeLayout>
</ScrollView>