<?xml version="1.0" encoding="utf-8"?>

 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@color/white"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LogIn As Admin "
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        />

    <TextView

        android:id="@+id/tv_log_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_to_continue"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/user_name"
        android:paddingLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/background"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/background"
/>
    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:backgroundTint="@color/primary"

        />
<!--<LinearLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--   android:orientation="horizontal"-->
<!--    android:textAlignment="center"-->
<!--    >-->
<!--   <TextView-->
<!--       android:id="@+id/tv_dont_have_account"-->
<!--       android:layout_width="wrap_content"-->
<!--       android:layout_height="wrap_content"-->
<!--       android:text="@string/dont_have_an_account"-->
<!--       android:layout_marginLeft="80dp"-->
<!--       android:layout_marginTop="10dp"-->
<!--       android:textSize="15sp"-->

<!--       />-->
<!--   <TextView-->
<!--   android:id="@+id/tv_go_to_signup"-->
<!--       android:layout_width="100dp"-->
<!--       android:layout_height="50dp"-->
<!--       android:text="@string/signup"-->
<!--       android:clickable="true"-->
<!--       android:layout_marginStart="10dp"-->
<!--       android:layout_marginTop="10dp"-->
<!--       android:textColor="#211ee3"-->
<!--       android:textStyle="bold"-->
<!--       android:textSize="15sp"-->
<!--       android:scrollHorizontally="true"-->
<!--       android:focusable="true"-->
<!--       />-->
<!--</LinearLayout>-->

</LinearLayout>
</ScrollView>